...
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      SizedBox(
                          width: 120, child: Image.asset('assets/logo-2x.png')),
                      const SizedBox(height: 20),
                      Text(
                        'Kirjaudu sisään',
                        style: Theme.of(context).textTheme.headlineSmall,
                      ),
                      TextFormField(
                        validator: (value) {
                          if (value == null || value.isEmpty) {
                            return 'Anna sähköpostiosoite';
...
                          return null;
                        },
                        decoration:
                            const InputDecoration(labelText: 'Salasana'),
                        obscureText: true,
                        controller: _passwordController,
                        key: const ValueKey("password"),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(0),
                        child: TextButton(
                          onPressed: () async {
                            if (!_formKey.currentState!.validate()) {
...
                                            child: const Text('Selvä'),
                                          ),
                                        ],
                                      ));
                            }
                          },
                          child: const Text('Kirjaudu'),
                        ),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(0),
                        child: TextButton(
                          onPressed: () => _openForgotPasswordScreen(context),
...
