// Copyright 2021, the Flutter project authors. Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

import 'package:adaptive_navigation/adaptive_navigation.dart';
import 'package:flutter/material.dart';

import '../routing.dart';
import 'scaffold_body.dart';

class PoliisiautoScaffold extends StatelessWidget {
  const PoliisiautoScaffold({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    final routeState = RouteStateScope.of(context);
    final selectedIndex = _getSelectedIndex(routeState.route.pathTemplate);

    return Scaffold(
      body: AdaptiveNavigationScaffold(
        selectedIndex: selectedIndex,
        body: const PoliisiautoScaffoldBody(),
        onDestinationSelected: (idx) {
          if (idx == 0) routeState.go('/home');
          if (idx == 1) routeState.go('/reports/popular');
          if (idx == 2) routeState.go('/authors');
        },
        destinations: const [
          AdaptiveScaffoldDestination(
            title: 'Etusivu',
            icon: Icons.home,
          ),
          AdaptiveScaffoldDestination(
            title: 'Minun ilmoitukset',
            icon: Icons.notifications,
          ),
          AdaptiveScaffoldDestination(
            title: 'Viestit',
            icon: Icons.message,
          ),
        ],
      ),
    );
  }

  int _getSelectedIndex(String pathTemplate) {
    if (pathTemplate == '/home') return 0;
    if (pathTemplate.startsWith('/reports')) return 1;
    if (pathTemplate == '/authors') return 2;
    return 0;
  }
}
